--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Task Board UI",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./fuse.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dist": "node ./fuse.js dist"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,19 @@
   "bugs": {
     "url": "https://github.com/RichardShephard/TaskBoardUI/issues"
   },
-  "homepage": "https://github.com/RichardShephard/TaskBoardUI"
+  "homepage": "https://github.com/RichardShephard/TaskBoardUI",
+  "devDependencies": {
+    "fuse-box": "^3.1.3",
+    "node-sass": "^4.7.2",
+    "postcss-selector-parser": "^3.1.1",
+    "typescript": "^2.7.2",
+    "uglify-es": "^3.3.9",
+    "vue-hot-reload-api": "^2.3.0",
+    "vue-template-compiler": "^2.5.15",
+    "vue-template-es2015-compiler": "^1.6.0"
+  },
+  "dependencies": {
+    "vue": "^2.5.15",
+    "vue-router": "^3.0.1"
+  }
 }
