--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "taskboardui",
   "version": "1.0.0",
   "description": "Task Board UI",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "node ./fuse.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,18 +18,20 @@
     "url": "https://github.com/RichardShephard/TaskBoardUI/issues"
   },
   "homepage": "https://github.com/RichardShephard/TaskBoardUI",
+  "dependencies": {
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
+  },
   "devDependencies": {
     "fuse-box": "^3.1.3",
     "node-sass": "^4.7.2",
+    "opn": "^5.3.0",
     "postcss-selector-parser": "^3.1.1",
     "typescript": "^2.7.2",
     "uglify-es": "^3.3.9",
     "vue-hot-reload-api": "^2.3.0",
-    "vue-template-compiler": "^2.5.15",
+    "vue-template-compiler": "^2.5.16",
     "vue-template-es2015-compiler": "^1.6.0"
-  },
-  "dependencies": {
-    "vue": "^2.5.15",
-    "vue-router": "^3.0.1"
   }
 }
